--- a/gym/proyecto1.css
+++ b/gym/proyecto1.css
@@ -49,8 +49,14 @@ list-style: none;
 border-bottom: 3px solid red;
 width: 200px;
 float: left;
-margin-left: 180px;
+margin-left: 115px;
 margin-top: 35px;
+}
+
+.lista{
+list-style: none;
+margin-left: 130px;
+float: left;
 }
 
 #planboton{
@@ -64,7 +70,15 @@ width: 100%;
 height: 150px;
 font-size: 15px;
 background-color:#ECEFF1;
+}
 
+.planes2{
+clear: both;
+float: left;
+width: 100%;
+height: 150px;
+font-size: 15px;
+background-color: #FBFCA4;
 }
 
 .planes ul li {
@@ -75,10 +89,26 @@ background-color:#ECEFF1;
   margin-left: 60px;
   height: 200px;
   width: 225px;
-
+}
+.planes2 ul li {
+  float: left;
+  list-style: none;
+  display: inline;
+  padding-top: 3px;
+  margin-left: 60px;
+  height: 200px;
+  width: 225px;
 }
 
+
 .planes ul li p {
+margin: 0px;
+text-align: center;
+padding-top:3px;
+width: 100%;
+}
+
+.planes2 ul li p {
 margin: 0px;
 text-align: center;
 padding-top:3px;
@@ -89,15 +119,22 @@ width: 100%;
 border-bottom: 3px solid red;
 font-size: 16px;
 }
- .instalaciones{
+.instalaciones{
    clear: both;
    float: left;
    width: 100%;
    height: 150px;
      background-color:#ECEFF1;
  }
+.instalaciones2{
+   clear: both;
+   float: left;
+   width: 100%;
+   height: 150px;
+     background-color:#FBFCA4;
+ }
 
- .instalaciones ul li {
+.instalaciones ul li {
    float: left;
    list-style: none;
    display: inline;
@@ -107,7 +144,15 @@ font-size: 16px;
    width: 225px;
 
  }
-
+.instalaciones2 ul li {
+   float: left;
+   list-style: none;
+   display: inline;
+   padding-top: 3px;
+   margin-left: 15px;
+   height: 200px;
+   width: 225px;
+}
  #planboton2{
  cursor: pointer;
  }
@@ -128,6 +173,16 @@ margin-left: 2.5%;
 margin-top: 8px;
 float: left;
 background-color: #ECEFF1;
+}
+	
+#carrusel2 {
+clear: both;
+width: 95%;
+height: 520px;
+margin-left: 2.5%;
+margin-top: 8px;
+float: left;
+background-color: #FBFCA4;
 
 
 
@@ -185,12 +240,23 @@ background-color: #ECEFF1;
         .jssora02r:hover { background-position: -183px -33px; }
         .jssora02l.jssora02ldn { background-position: -3px -33px; }
         .jssora02r.jssora02rdn { background-position: -63px -33px; }
+
 #carrusel_automatico {
 float: left;
     height: 350px;
     bottom: 0;
     width: 100%;
     background-color: #E0E0E0;
+    position: absolute;
+    bottom: 0;
+    width: 94%;
+}
+#carrusel_automatico2 {
+float: left;
+    height: 350px;
+    bottom: 0;
+    width: 100%;
+    background-color: #FDFEBA;
     position: absolute;
     bottom: 0;
     width: 94%;
