--- a/gym/usuario.css
+++ b/gym/usuario.css
@@ -105,6 +105,21 @@ margin-left: 25px;
 
 }
 
+#contenidodatos2{
+float: left;
+width: 35%;
+height: 440px;
+background-color: #FDFEBA;
+margin-top: 8px;
+border-radius: 35px;
+}
+
+#contenidodatos2 p{
+margin-top:35px;
+margin-left: 25px;
+
+}
+
 #contenidoplan{
 float: left;
 width: 35%;
@@ -121,6 +136,21 @@ margin-left: 25px;
 
 }
 
+#contenidoplan3{
+float: left;
+width: 35%;
+height: 440px;
+background-color: #FDFEBA;
+margin-top: 10px;
+border-radius: 35px;
+margin-left: 25px
+}
+
+#contenidoplan3 p{
+margin-top: 35px;
+margin-left: 25px;
+
+}
 .subrayado {
 border-bottom: 3px solid red;
 font-size: 16px;
@@ -225,7 +255,18 @@ font-weight: bold;
 background-color: #ECEFF1;
 border-radius: 50px;
 }
-
+.arriba2{
+padding-left: 40px;
+margin-top:40px;
+margin-left: 250px;
+height: 170px;
+width: 12%;
+float: left;
+clear: both;
+font-weight: bold;
+background-color: #FDFEBA;
+border-radius: 50px;
+}
 .debajo{
 padding-left: 40px;
 margin-top:40px;
@@ -237,7 +278,17 @@ font-weight: bold;
 border-radius: 50px;
 background-color: #ECEFF1;
 }
-
+.debajo2{
+padding-left: 40px;
+margin-top:40px;
+margin-left: 230px;
+height: 170px;
+width: 12%;
+float: left;
+font-weight: bold;
+border-radius: 50px;
+background-color: #FDFEBA;
+}
 .logoadmin2{
 height: 100px;
 width: 100px;
@@ -249,6 +300,18 @@ float: left;
 width: 35%;
 height: 220px;
 background-color: #ECEFF1;
+margin-top: 50px;
+border-radius: 35px;
+margin-left: 40px;
+padding: 20px;
+font-weight: bold;
+}
+
+#contenidoplan3b{
+float: left;
+width: 35%;
+height: 220px;
+background-color: #FDFEBA;
 margin-top: 50px;
 border-radius: 35px;
 margin-left: 40px;
